<resources>
    <string name="app_name">My Payments</string>
    <string name="month_title_hint">Введите название месяца</string>
    <string name="month_title_lable">Месяц</string>
    <string name="month_payments_label">Коммунальные платежи</string>
    <string name="month_closed_label">Месяц закрыт?</string>
    <string name="date_picker_title">Дата закрытия месяца</string>
    <string name="new_month">Новый месяц</string>
    <!--<string name="show_subtitle">Показать подзаголовок</string>-->
    <!--<string name="hide_subtitle">Скрыть подзаголовок</string>
    <string name="subtitle_format">Формат подзаголовка</string>-->
    <string name="btn_back">Назад</string>
    <string name="btn_delete_photo">Удалить фото</string>
    <string name="delete_month">Удалить этот месяц</string>
    <string name="new_port_and_ip">Соединиться с сервером</string>
    <string name="power">Элетроэнергия</string>
    <string name="tariff">Тариф</string>
    <string name="this_month">Показания счетчика</string>
    <string name="last_month">Прошлый месяц</string>
    <string name="send_meter">Отправить показания газа</string>
    <string name="total">К оплате</string>
    <string name="gas">Газ</string>
    <string name="cool_water">Холодная вода</string>
    <string name="hot_water">Горячая вода</string>
    <string name="house_pay">Содержание дома</string>
    <string name="garbage">Вывоз мусора</string>
    <string name="heating">Отопление</string>
    <string name="extra_pay">Дополнительно</string>
    <string name="calculate">Рассчитать и сохранить данные</string>
    <string name="summa">Сумма платежей составляет:</string>
    <string name="whom">Кому:</string>
    <string name="adress">contact@zp.104.ua</string>
    <string name="theme">Тема:</string>
    <string name="theme_name">Показания счетчика</string>
    <string name="account">Лицевой счет:</string>
    <string name="account_number">0600298828</string>
    <string name="full_name">Фамилия И.О.</string>
    <string name="client_full_name">Малена В.И.</string>
    <string name="client_adress">Адрес:</string>
    <string name="client_full_adress">ул. Северокольцевая 5а, кв. 14.</string>
    <string name="testimony">Показания счетчика:</string>
    <string name="client_testimony">1766</string>
    <string name="date">Дата снятия показаний:</string>
    <string name="date_test">04.09.2016г.</string>
    <string name="phone">Телефон для связи:</string>
    <string name="client_phone">(066) 525-69-65</string>
    <string name="send">Отправить письмо</string>

</resources>
